# kaggle_kedro

./: LICENSE  README.md  pyproject.toml  requirements.txt
conf/base/catalog/: 01_raw.yml  03_primary.yml
conf/base/parameters/: feature_engineering.yml
conf/development/: catalog.yml
conf/local/: catalog.yml  parameters.yml
docs/source/: conf.py
notebooks/: add_kedro_to_a_notebook.ipynb  example_notebook_kedro.ipynb
src/kedro_project/: pipeline_registry.py
src/kedro_project/pipelines/data_processing/: nodes.py  pipeline.py
src/kedro_project/pipelines/feature_engineering/: nodes.py  pipeline.py
src/kedro_project/utils/: data_splitters.py  utils.py
